--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-    <title>EchoBot</title>
+    <title>Weather bot</title>
 </head>
 <body>
-    Hello world! This is the EchoBot home page :)
+    Hello world! This is the Weather Bot home page :)
 </body>	
 </html>
